--- a/build.gradle
+++ b/build.gradle
@@ -1,46 +1,10 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id 'com.android.application' version '8.2.0' apply false
+    id 'com.android.library' version '8.2.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.20' apply false
 }
 
-android {
-    namespace 'com.ejemplo.alfred'
-    compileSdk 34
-
-    defaultConfig {
-        applicationId "com.ejemplo.alfred"
-        minSdk 24
-        targetSdk 34
-        versionCode 1
-        versionName "1.0"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-}
-
-dependencies {
-    implementation 'androidx.core:core-ktx:1.12.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.11.0'
-    implementation 'androidx.activity:activity-ktx:1.8.2'
-    implementation 'androidx.webkit:webkit:1.9.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
-
-    // llama.cpp para Android (versión precompilada)
-    implementation 'com.anggrayudi:llama.cpp-android:0.0.8'   // buscar alternativa actualizada
-    // Nota: Puedes necesitar compilar la biblioteca manualmente si esta no funciona.
-    // Por simplicidad, asumimos que existe una binding que expone LlamaInference.
-    // En su defecto, usaremos llamada a binario nativo mediante ProcessBuilder.
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
